objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Hierarchy_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Hierarchy_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>