objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Last_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The accounting period that the consolidation job was run for</description>
    <label>Last Period</label>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipLabel>Ledger Hierarchy</relationshipLabel>
    <relationshipName>Ledger_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>