objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>