objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Ledger_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger_Type__c</fullName>
    <formula>IF(CONTAINS(TEXT(AcctSeed__Ledger__r.AcctSeed__Type__c), &apos;Consolidations&apos;), &apos;Consolidations&apos;, 
IF(CONTAINS(TEXT(AcctSeed__Ledger__r.AcctSeed__Type__c), &apos;Eliminations&apos;),  &apos;Eliminations&apos;,
TEXT(AcctSeed__Ledger__r.AcctSeed__Type__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Type</label>
    <type>Text</type>
</CustomField>