objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Notes__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>