objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Root_Node_ID__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Root_Node_ID__c</fullName>
    <description>The ID of the hierarchy&apos;s root node. Auto populated during record creation.</description>
    <label>Root Node ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>