objects/AcctSeed__Ledger_Hierarchy__c/fields/AcctSeed__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>